--- a/index.html
+++ b/index.html
@@ -3,10 +3,76 @@
 <head>
 	<meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <title>My portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My portfolio</title>
+  <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>My portfolio</h1>
+  <header>
+    <h1>My portfolio</h1>
+    <nav>
+      <li>
+        <a href="#">About</a>
+      </li>
+      <li>
+        <a href="#">Works</a>
+      </li>
+      <li>
+        <a href="#">Contact</a>
+      </li>
+    </nav>
+  </header>
+  <main>
+    <div class="main-visual">
+      <img src="" alt="">
+    </div>
+    <section id="about" class="container">
+      <h2 class="section-title">About</h2>
+      <div class="icon">
+        <img src="" alt="">
+      </div>
+      <div class="profile-text">
+        <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
+        <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
+        <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
+      </div>
+    </section>
+    <section id="works" class="container">
+      <h2 class="section-title">Works</h2>
+      <div class="works-item">
+        <a href="#">
+          <img src="" alt="">
+        </a>
+        <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
+      </div>
+      <div class="works-item">
+        <a href="#">
+          <img src="" alt="">
+        </a>
+        <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
+      </div>
+      <div class="works-item">
+        <a href="#">
+          <img src="" alt="">
+        </a>
+        <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
+      </div>
+    </section>
+    <section id="contact" class="container">
+      <h2 class="section-title">Contact</h2>
+      <form action="#" method="post">
+        <dl>
+          <dt><label for="name">NAME</label></dt>
+          <dd><input type="text" id="name" name="your-name"></dd>
+          <dt><label for="email">E-mail</label></dt>
+          <dd><input type="email" id="email" name="your-email"></dd>
+          <dt><label for="message">MESSAGE</label></dt>
+          <dd><textarea id="message" name="your-message"></textarea></dd>
+        </dl>
+        <div class="button"><input type="submit" value="送信"></div>
+      </form>
+    </section>
+  </main>
 </body>
 </html>
