--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
+  <header class="container">
     <h1>My portfolio</h1>
     <nav>
-      <li>
-        <a href="#">About</a>
-      </li>
-      <li>
-        <a href="#">Works</a>
-      </li>
-      <li>
-        <a href="#">Contact</a>
-      </li>
+      <ul>
+        <li>
+          <a href="#about">About</a>
+        </li>
+        <li>
+          <a href="#works">Works</a>
+        </li>
+        <li>
+          <a href="#contact">Contact</a>
+        </li>
+      </ul>
     </nav>
   </header>
   <main>
     <div class="main-visual">
-      <img src="" alt="">
+      <img src="img/animal-1834409_1920.jpg" alt="main-visual">
     </div>
     <section id="about" class="container">
       <h2 class="section-title">About</h2>
