--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header class="container">
-    <h1>My portfolio</h1>
+    <h1>My Portfolio</h1>
     <nav>
       <ul>
         <li>
@@ -31,20 +31,22 @@
     </div>
     <section id="about" class="container">
       <h2 class="section-title">About</h2>
-      <div class="icon">
-        <img src="" alt="">
-      </div>
-      <div class="profile-text">
-        <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
-        <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
-        <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
+      <div class="flex">
+        <div class="icon">
+          <img src="img/joey-huang-sMt4EfGJR4E-unsplash.jpg" alt="profile-icon">
+        </div>
+        <div class="profile-text">
+          <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
+          <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
+          <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
+        </div>
       </div>
     </section>
     <section id="works" class="container">
       <h2 class="section-title">Works</h2>
       <div class="works-item">
-        <a href="#">
-          <img src="" alt="">
+        <a href="index.html">
+          <!-- <img src="img/animal-1834409_1920.jpg" alt="My Portfolio"> -->
         </a>
         <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
       </div>
@@ -76,5 +78,8 @@
       </form>
     </section>
   </main>
+  <footer class="container">
+    <p>&copy;2022 My Portfolio</p>
+  </footer>
 </body>
 </html>
