--- a/index.html
+++ b/index.html
@@ -44,23 +44,25 @@
     </section>
     <section id="works" class="container">
       <h2 class="section-title">Works</h2>
-      <div class="works-item">
-        <a href="index.html">
-          <!-- <img src="img/animal-1834409_1920.jpg" alt="My Portfolio"> -->
-        </a>
-        <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
-      </div>
-      <div class="works-item">
-        <a href="#">
-          <img src="" alt="">
-        </a>
-        <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
-      </div>
-      <div class="works-item">
-        <a href="#">
-          <img src="" alt="">
-        </a>
-        <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
+      <div class="grid">
+        <div class="works-item">
+          <a href="index.html">
+            <img src="img/animal-1834409_1920.jpg" alt="My Portfolio">
+          </a>
+          <p>My Portfolio</p>
+        </div>
+        <div class="works-item">
+          <a href="#">
+            <img src="img/joe-cleary-CfANlkglvUc-unsplash.jpg" alt="">
+          </a>
+          <p>Coming Soon...</p>
+        </div>
+        <div class="works-item">
+          <a href="#">
+            <img src="img/aleksandar-popovski-b7bMiKYEMqY-unsplash.jpg" alt="">
+          </a>
+          <p>Coming Soon...</p>
+        </div>
       </div>
     </section>
     <section id="contact" class="container">
@@ -78,7 +80,7 @@
       </form>
     </section>
   </main>
-  <footer class="container">
+  <footer id="footer">
     <p>&copy;2022 My Portfolio</p>
   </footer>
 </body>
