--- a/index.html
+++ b/index.html
@@ -49,13 +49,21 @@
           <a href="index.html">
             <img src="img/animal-1834409_1920.jpg" alt="My Portfolio">
           </a>
-          <p>My Portfolio</p>
+          <p>
+            My Portfolio
+            <br>
+            このサイトです
+          </p>
         </div>
         <div class="works-item">
-          <a href="#">
+          <a href="https://warashi0917.github.io/komariku-coffee/">
             <img src="img/joe-cleary-CfANlkglvUc-unsplash.jpg" alt="">
           </a>
-          <p>Coming Soon...</p>
+          <p>
+            Komariku Coffee
+            <br>
+            架空のカフェサイトです
+          </p>
         </div>
         <div class="works-item">
           <a href="#">
