--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
           <img src="img/joey-huang-sMt4EfGJR4E-unsplash.jpg" alt="profile-icon">
         </div>
         <div class="profile-text">
-          <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
-          <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
-          <p>ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。ここにテキストを入力。</p>
+          <p>warashi0917</p>
+          <p>猫をこよなく愛するアラサー女。田舎生まれ、田舎育ち。</p>
+          <p>HTMLとCSSのコーディングをしています。現在JavaScriptの勉強中です。
+            <br>
+            UI/UXを第一に考えたWebサイトづくりをしていきたいと思います。
+          </p>
         </div>
       </div>
     </section>
