--- a/index.html
+++ b/index.html
@@ -65,14 +65,19 @@
           <p>
             Komariku Coffee
             <br>
-            架空のカフェサイトです
+            架空のカフェサイトです。
           </p>
         </div>
         <div class="works-item">
-          <a href="#">
+          <a href="https://warashi0917.github.io/komariku.fn/">
             <img src="img/aleksandar-popovski-b7bMiKYEMqY-unsplash.jpg" alt="">
           </a>
-          <p>Coming Soon...</p>
+          <p>
+            Komariku FN
+            <br>
+            架空の家具店のECサイトです。
+            <br>
+            JavaScriptを使っています。</p>
         </div>
       </div>
     </section>
