--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
           <p>
             My Portfolio
             <br>
-            このサイトです
+            このサイトです。
           </p>
         </div>
         <div class="works-item">
           <a href="https://warashi0917.github.io/komariku-coffee/">
-            <img src="img/joe-cleary-CfANlkglvUc-unsplash.jpg" alt="">
+            <img src="img/mike-kenneally-zlwDJoKTuA8-unsplash.jpg" alt="">
           </a>
           <p>
             Komariku Coffee
@@ -70,7 +70,7 @@
         </div>
         <div class="works-item">
           <a href="https://warashi0917.github.io/komariku.fn/">
-            <img src="img/aleksandar-popovski-b7bMiKYEMqY-unsplash.jpg" alt="">
+            <img src="img/virender-singh-hE0nmTffKtM-unsplash.jpg" alt="">
           </a>
           <p>
             Komariku FN
